--- a/10-master.conf
+++ b/10-master.conf
@@ -96,6 +96,11 @@ service auth {
   #unix_listener /var/spool/postfix/private/auth {
   #  mode = 0666
   #}
+  unix_listener /var/spool/postfix/private/auth {
+    mode = 0660
+    user = postfix
+    group = postfix
+  }
 
   # Auth process is run as this user.
   #user = $default_internal_user
